small algorithm fixes. finished testing and perfecting the JSM